2007-11-13  Bastien Nocera  <hadess@hadess.net>

	* src/e-contact-entry.c: (completion_match_selected_cb):
	Update from contact-lookup-applet, so we don't error out
	if one of the sources isn't available

2007-11-12  Bastien Nocera  <hadess@hadess.net>

	* src/icon.c: (tray_icon_activate_cb): Don't allow showing the
	new message dialogue if we're not connected to the phone
	(Closes: #495384)

2007-11-12  Bastien Nocera  <hadess@hadess.net>

	* src/e-contact-entry.c: Update from contact-lookup-applet,
	and remove the need to set the addressbook sources to
	autocomplete

2007-11-12  Bastien Nocera  <hadess@hadess.net>

	* src/icon.c: (tray_icon_activate_cb): Make a single-click
	on the tray icon popup the "new message" dialogue, when no
	messages are waiting (Closes: #495384)

2007-11-12  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c:
	(phonemgr_listener_init), (phonemgr_listener_connect),
	(phonemgr_listener_get_own_details): When connecting the first
	time, try to get our own phone number, for use in the telepathy
	backend, not exported yet, and only works on some phones

2007-11-12  Bastien Nocera  <hadess@hadess.net>

	* ui/phonemgr.glade: Make the icons used named icons, instead of
	the stock ones. The stock icons didn't get themed, and didn't
	load if GNOME and gnome-phone-manager were installed in different
	prefixes. Remove "gnome" requires from the file as well
	(Closes: #495229)

2007-11-09  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phones.xml: Big patch from Pawel Kot
	<gnokii@gmail.com> to add all the phones from gnokii
	to the phones.xml file (Closes: #454825)

2007-11-09  Bastien Nocera  <hadess@hadess.net>

	* telepathy/im-channel.c: (phoney_im_channel_send):
	Fix the text we send not being echo'ed back in the UI

2007-11-08  Bastien Nocera  <hadess@hadess.net>

	* src/main.c: (main): Init the i18n functions

	* telepathy/im-channel.c: (phoney_im_channel_send):
	Don't escape the data coming from telepathy itself
