@@ -22,6 +22,7 @@ gnome_phone_manager_SOURCES =		\
 	e-phone-entry.c			\
 	e-phone-entry.h			\
 	$(CLA_FILES)			\
+	$(MARSHALFILES)			\
 	phonemgr-object.c		\
 	phonemgr-object.h		\
 	phonemgr-chooser-button.c	\
@@ -45,17 +46,25 @@ desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 
 # The test program
 noinst_PROGRAMS = test-entry
-test_entry_SOURCES = test-entry.c e-phone-entry.c e-phone-entry.h $(CLA_FILES)
+test_entry_SOURCES = test-entry.c e-phone-entry.c e-phone-entry.h $(CLA_FILES) $(MARSHALFILES)
 test_entry_LDADD = $(PHONEMGR_LIBS)
+
+MARSHALFILES = econtactentry-marshal.c econtactentry-marshal.h
+BUILT_SOURCES = $(MARSHALFILES)
+
+econtactentry-marshal.c: econtactentry-marshal.h
+	( $(GLIB_GENMARSHAL) --prefix=econtactentry_marshal $(srcdir)/econtactentry-marshal.list --header --body > econtactentry-marshal.c )
+econtactentry-marshal.h: econtactentry-marshal.list
+	( $(GLIB_GENMARSHAL) --prefix=econtactentry_marshal $(srcdir)/econtactentry-marshal.list --header > econtactentry-marshal.h )
 
 CLA_FILES = e-contact-entry.h e-contact-entry.c
 CLADIR = $(srcdir)/../../contact-lookup-applet/src/
 GCONF_BRIDGE_FILES = gconf-bridge.h gconf-bridge.c
 GCONF_BRIDGE_DIR = $(srcdir)/../../libgconf-bridge/libgconf-bridge/
 regenerate-built-sources:
-	EGGFILES="$(CLA_FILES)" EGGDIR="$(CLADIR)" $(srcdir)/update-from-egg.sh || true
+	EGGFILES="$(CLA_FILES) econtactentry-marshal.list" EGGDIR="$(CLADIR)" $(srcdir)/update-from-egg.sh || true
 	EGGFILES="$(GCONF_BRIDGE_FILES)" EGGDIR="$(GCONF_BRIDGE_DIR)" $(srcdir)/update-from-egg.sh || true
 
-EXTRA_DIST = gnome-phone-manager.desktop.in org_gnome_phone_Manager.xml
+EXTRA_DIST = gnome-phone-manager.desktop.in org_gnome_phone_Manager.xml econtactentry-marshal.list
 CLEANFILES = $(BUILT_SOURCES) $(desktop_DATA)
 
